err/django-template-repl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_template_repl-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/template_repl'...
Listing './lib/python3.5/site-packages/template_repl/management'...
Listing './lib/python3.5/site-packages/template_repl/management/commands'...
Compiling './lib/python3.5/site-packages/template_repl/management/commands/templateshell.py'...
***   File "./lib/python3.5/site-packages/template_repl/management/commands/templateshell.py", line 28
    print 'Response for given URL contains no context (code %s).' % response.status_code
                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/template_repl/repl.py'...
***   File "./lib/python3.5/site-packages/template_repl/repl.py", line 55
    except TemplateSyntaxError, e:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/template_repl/templatetags'...
Listing './share'...
Listing './share/python-wheels'...
